Create grid, continue coin system and status items

--- a/src/css/colors.css
+++ b/src/css/colors.css
@@ -4,16 +4,22 @@
   --border-clr: #d1d1d1;
   --clr-red-bg: #ffc5c5;
   --clr-red-fg: #c50000;
+  --clr-red-dot: var(--clr-red-bg);
   --clr-green-bg: #92ff8f;
   --clr-green-fg: #299126;
+  --clr-green-dot: var(--clr-green-bg);
   --clr-yellow-bg: #ffecaa;
   --clr-yellow-fg: #a58b2f;
+  --clr-yellow-dot: var(--clr-yellow-bg);
   --clr-orange-bg: #ffe1b5;
   --clr-orange-fg: #af7011;
+  --clr-orange-dot: var(--clr-orange-bg);
   --clr-blue-bg: #8fd0ff;
   --clr-blue-fg: #1566a0;
+  --clr-blue-dot: var(--clr-blue-bg);
   --clr-aqua-bg: #ddfff3;
   --clr-aqua-fg: #39a17d;
+  --clr-aqua-dot: var(--clr-aqua-bg);
   --button-bg: #f1f1f1;
   --button-hover-bg: #e8e8e8;
   --button-active-bg: #e0e0e0;
@@ -28,16 +34,22 @@
     --border-clr: #434343;
     --clr-red-bg: #452929;
     --clr-red-fg: #ff7e7e;
+    --clr-red-dot: var(--clr-red-fg);
     --clr-green-bg: #283e28;
     --clr-green-fg: #a8ffa6;
+    --clr-green-dot: var(--clr-green-fg);
     --clr-yellow-bg: #49432e;
     --clr-yellow-fg: #ffe073;
+    --clr-yellow-dot: var(--clr-yellow-fg);
     --clr-orange-bg: #543d1b;
     --clr-orange-fg: #ffad32;
+    --clr-orange-dot: var(--clr-orange-fg);
     --clr-blue-bg: #273a48;
     --clr-blue-fg: #96d3ff;
+    --clr-blue-dot: var(--clr-blue-fg);
     --clr-aqua-fg: #79ffd0;
     --clr-aqua-bg: #214538;
+    --clr-aqua-dot: var(--clr-aqua-fg);
     --button-bg: #313131;
     --button-hover-bg: #414141;
     --button-active-bg: #262626;
