--- a/src/css/main.css
+++ b/src/css/main.css
@@ -6,3 +6,5 @@
 @import url("./app.css");
 @import url("./ui.css");
 @import url("./page.css");
+@import url("./coinnotifier.css");
+@import url("./grid.css");
