--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,11 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+@import url("https://fonts.googleapis.com/css2?family=Silkscreen&display=swap");
 @import url("./general.css");
 @import url("./login.css");
 @import url("./colors.css");
 @import url("./app.css");
 @import url("./ui.css");
 @import url("./page.css");
-@import url("./coinnotifier.css");
 @import url("./grid.css");
 @import url("./shop.css");
+@import url("./connecterr.css");
