--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,8 +1,16 @@
+div.login-bg {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+}
+
 div.login {
   background-color: var(--bg);
   color: var(--fg);
-  padding: 20px;
-  border-radius: 10px;
+  padding: 25px;
   border: var(--border-clr) 1px solid;
   width: 250px;
   height: 245px;
@@ -14,13 +22,13 @@ div.login * {
 
 div.login div.logo-wrapper {
   margin: 0 auto;
-  margin-top: -64px;
+  margin-top: -128px;
+  margin-bottom: 40px;
   box-sizing: border-box;
   height: 80px;
   width: 80px;
   line-height: 100px;
-  border-radius: 40px;
-  background-color: var(--button-bg);
+  border-radius: 0px;
   padding: 8px 0;
   padding-top: 4px;
 }
