--- a/src/css/ui/inputs.css
+++ b/src/css/ui/inputs.css
@@ -1,9 +1,7 @@
 input {
-  padding: 5px;
+  padding: 4px 5px;
   background-color: var(--button-active-bg);
-
-  border: var(--button-bg) 1px solid;
-  border-radius: 5px;
+  border: var(--button-bg) 2px solid;
   position: relative;
   box-sizing: border-box;
   color: var(--fg);
